force-app/main/default/objects/PayPal_Settings__c/PayPal_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>We have used payflow developer guide and Payflow pro XML pay. These are link&#39;s to the documentation https://www.paypalobjects.com/webstatic/en_US/developer/docs/pdf/pp_payflowpro_guide.pdf (page 29) and https://www.paypalobjects.com/webstatic/en_US/developer/docs/pdf/pp_payflowpro_xmlpay_guide.pdf (look for &quot;Card Authorization Request&quot; and &quot;Card Capture Request&quot;</description>
    <label>PayPal Settings</label>
</CustomObject>