force-app/main/default/objects/PayPal_Settings__c/fields/Live_Target_URL__c.field-meta.xml
<CustomField>
    <fullName>Live_Target_URL__c</fullName>
    <description>https://payflowpro.paypal.com</description>
    <inlineHelpText>https://payflowpro.paypal.com</inlineHelpText>
    <label>Live Target URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>