force-app/main/default/objects/PayPal_Settings__c/fields/MaxFailPayments__c.field-meta.xml
<CustomField>
    <fullName>MaxFailPayments__c</fullName>
    <label>MaxFailPayments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>