force-app/main/default/objects/PayPal_Settings__c/fields/OptionalTrans__c.field-meta.xml
<CustomField>
    <fullName>OptionalTrans__c</fullName>
    <label>OptionalTrans</label>
    <length>100</length>
    <type>Text</type>
</CustomField>