force-app/main/default/objects/PayPal_Settings__c/fields/OptionalTransAmt__c.field-meta.xml
<CustomField>
    <fullName>OptionalTransAmt__c</fullName>
    <label>OptionalTransAmt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>