force-app/main/default/objects/PayPal_Settings__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>(Required) The ID provided to you by the authorized PayPal Reseller who registered you 
for the Payflow SDK. If you purchased your account directly from PayPal, use PayPal.
Limitations: Sixty-four alphanumeric, case-sensitive characters.</description>
    <inlineHelpText>(Required) The ID provided to you by the authorized PayPal Reseller who registered you 
for the Payflow SDK. If you purchased your account directly from PayPal, use PayPal.
Limitations: Sixty-four alphanumeric, case-sensitive characters.</inlineHelpText>
    <label>Partner</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>