force-app/main/default/objects/PayPal_Settings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>(Required) The password that you defined while registering for the account.
Limitations: Six- to thirty-two alphanumeric, case-sensitive characters.</description>
    <inlineHelpText>(Required) The password that you defined while registering for the account.
Limitations: Six- to thirty-two alphanumeric, case-sensitive characters.</inlineHelpText>
    <label>Password</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>