force-app/main/default/objects/PayPal_Settings__c/fields/PayPeriod__c.field-meta.xml
<CustomField>
    <fullName>PayPeriod__c</fullName>
    <label>PayPeriod</label>
    <length>100</length>
    <type>Text</type>
</CustomField>