force-app/main/default/objects/PayPal_Settings__c/fields/RetryNumDays__c.field-meta.xml
<CustomField>
    <fullName>RetryNumDays__c</fullName>
    <label>RetryNumDays</label>
    <length>100</length>
    <type>Text</type>
</CustomField>