force-app/main/default/objects/PayPal_Settings__c/fields/Test_Live_Target_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_Live_Target_URL__c</fullName>
    <description>https://pilot-payflowpro.paypal.com</description>
    <inlineHelpText>https://pilot-payflowpro.paypal.com</inlineHelpText>
    <label>Test Live Target URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>