force-app/main/default/objects/PayPal_Settings__c/fields/Test_Partner__c.field-meta.xml
<CustomField>
    <fullName>Test_Partner__c</fullName>
    <description>PayPal</description>
    <inlineHelpText>PayPal</inlineHelpText>
    <label>Test Partner</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>