force-app/main/default/objects/PayPal_Settings__c/fields/Test_Password__c.field-meta.xml
<CustomField>
    <fullName>Test_Password__c</fullName>
    <description>ThinkCloud*1</description>
    <inlineHelpText>ThinkCloud*1</inlineHelpText>
    <label>Test Password</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>