force-app/main/default/objects/PayPal_Settings__c/fields/Test_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Test_Vendor__c</fullName>
    <description>SolutionTest</description>
    <inlineHelpText>SolutionTest</inlineHelpText>
    <label>Test Vendor</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>