force-app/main/default/objects/PayPal_Settings__c/fields/TotalAmt__c.field-meta.xml
<CustomField>
    <fullName>TotalAmt__c</fullName>
    <label>TotalAmt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>