force-app/main/default/objects/PayPal_Settings__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>(Required) If you set up one or more additional users on the account, this value is the ID 
of the user authorized to process transactions. If, however, you have not set up additional 
users on the account, USER has the same value as VENDOR. 
Limitations: Sixty-four alphanumeric, case-sensitive characters.</description>
    <inlineHelpText>(Required) If you set up one or more additional users on the account, this value is the ID 
of the user authorized to process transactions. If, however, you have not set up additional 
users on the account, USER has the same value as VENDOR.</inlineHelpText>
    <label>User</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>