force-app/main/default/objects/PayPal_Settings__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>(Required) Your merchant login ID that you created when you registered for the account.
Limitations: Sixty-four alphanumeric, case-sensitive characters.</description>
    <inlineHelpText>(Required) Your merchant login ID that you created when you registered for the account.
Limitations: Sixty-four alphanumeric, case-sensitive characters.</inlineHelpText>
    <label>Vendor</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>